# Gemini3-Hackathon-Mystery-Game

./: .env.example  .gitignore  README.md  docker-compose.yml  要件定義書.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  enums.py  errors.py  main.py  models.py  schemas.py
backend/app/services/: follow_up.py  game_service.py  llm_client.py  local_case_factory.py  prompts.py  scoring_service.py
backend/tests/: test_api.py  test_follow_up.py  test_prompts.py
frontend/: Dockerfile  dev-entrypoint.sh  index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
