[project]
name = "mystery-game-backend"
version = "0.1.0"
description = "AI GM mystery game backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
